--- a/APIBoilerplate/APIBoilerplate.Application/APIBoilerplate.Application.csproj
+++ b/APIBoilerplate/APIBoilerplate.Application/APIBoilerplate.Application.csproj
@@ -7,7 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
     <ProjectReference Include="..\APIBoilerplate.Domain\APIBoilerplate.Domain.csproj" />
   </ItemGroup>
+
+
 
 </Project>
