- token set up done

--- a/APIBoilerplate/APIBoilerplate.Api/APIBoilerplate.Api.csproj
+++ b/APIBoilerplate/APIBoilerplate.Api/APIBoilerplate.Api.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>f3b1a0b5-369d-4a18-b600-dac2cfea0f3b</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
