--- a/APIBoilerplate/APIBoilerplate.Api/appsettings.Development.json
+++ b/APIBoilerplate/APIBoilerplate.Api/appsettings.Development.json
@@ -4,5 +4,11 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "JwtSettings": {
+    "Secret": "",
+    "Issuer": "APIBoilarplate",
+    "MinutesToExpiration": 60,
+    "Audience": "APIBoilarplate"
+    }  
 }
