--- a/APIBoilerplate/APIBoilerplate.Infrastructure/APIBoilerplate.Infrastructure.csproj
+++ b/APIBoilerplate/APIBoilerplate.Infrastructure/APIBoilerplate.Infrastructure.csproj
@@ -1,5 +1,4 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
@@ -8,6 +7,12 @@
 
   <ItemGroup>
     <ProjectReference Include="..\APIBoilerplate.Application\APIBoilerplate.Application.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="7.0.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.25.1" />
   </ItemGroup>
 
 </Project>
