--- a/APIBoilerplate/APIBoilerplate.Api/APIBoilerplate.Api.csproj
+++ b/APIBoilerplate/APIBoilerplate.Api/APIBoilerplate.Api.csproj
@@ -13,4 +13,8 @@
     <ProjectReference Include="..\APIBoilerplate.Infrastructure\APIBoilerplate.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="ErrorOr" Version="1.2.1" />
+  </ItemGroup>
+
 </Project>
