--- a/APIBoilerplate/APIBoilerplate.Api/APIBoilerplate.Api.csproj
+++ b/APIBoilerplate/APIBoilerplate.Api/APIBoilerplate.Api.csproj
@@ -17,6 +17,10 @@
     <PackageReference Include="ErrorOr" Version="1.2.1" />
     <PackageReference Include="Mapster" Version="7.3.0" />
     <PackageReference Include="Mapster.DependencyInjection" Version="1.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.2">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
   </ItemGroup>
 
 </Project>
